@@ -1,3 +1,8 @@
+2000-03-21  Frank Ch. Eigler  <fche@redhat.com>
+
+	* interp.c (sim_open): Sort & extend dummy memory regions for
+	--board=jmr3904 for eCos.
+
 2000-03-02  Frank Ch. Eigler  <fche@redhat.com>
 
 	* configure: Regenerated.
